--- a/aboutus.css
+++ b/aboutus.css
@@ -1,31 +1,77 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: cursive;
+    font-family: arial;
+}
+.socials{
+    width: 63%;
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%);
+    text-align: right;
+    color: rgb(23, 20, 20);
+}
+.socials h1{
+    font-size: 70px;
+    width: 91%;
+}
+.socials p{
+    width: 81%;
+    margin-left: 30px;
+    font-weight: bold;
+    position: relative;
+}
+.banner{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(#ffdad5, #fff7f9);
+    background-size: cover;
+    background-position: center;
+}
+.navbar{
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .logo{
     width: 80px;
     cursor: pointer;
 }
-.banner{
-    font-family: arial;
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    position: relative;
 }
-.banner h1{
-    font-size: 70px;
-    margin-left: 980px;
-    font-weight: bold;
+.navbar ul li a{
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
 }
-.banner p{
-    font-size: 25px;
-    margin-left: 670;
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 0%;
+    background: #1a1e1e;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 100%;
 }
 .socials{
     font-family: arial;
+    border: 100px;
 }
 .socials h1{
     font-size: 70px;
     margin-left: 820px;
-    font-weight; bold;
+    font-weight: bold;
 }
 .socials p{
     font-size: 25px;
