--- a/aboutus.css
+++ b/aboutus.css
@@ -3,23 +3,37 @@
     padding: 0;
     font-family: arial;
 }
+
+.content{
+    font-family: arial;
+}
+.content h1{
+    font-size: 70px;
+    margin-left: 950px;
+    margin-top: none;
+    font-weight: bold;
+}
+.content p{
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 700px;
+    font-weight: bold;
+}
+
 .socials{
-    width: 63%;
-    top: 50%;
-    position: absolute;
-    transform: translate(-50%);
-    text-align: right;
-    color: rgb(23, 20, 20);
+    border: 100px;
 }
 .socials h1{
     font-size: 70px;
-    width: 91%;
+    margin-left: 925px;
+    margin-top: 250px;
+    font-weight: bold;
 }
 .socials p{
-    width: 81%;
-    margin-left: 30px;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 950px;
     font-weight: bold;
-    position: relative;
 }
 .banner{
     width: 100%;
@@ -44,6 +58,7 @@
     list-style: none;
     display: inline-block;
     margin: 0 20px;
+    font-size: 20px;
     position: relative;
 }
 .navbar ul li a{
@@ -64,17 +79,4 @@
 .navbar ul li:hover::after{
     width: 100%;
 }
-.socials{
-    font-family: arial;
-    border: 100px;
-}
-.socials h1{
-    font-size: 70px;
-    margin-left: 820px;
-    font-weight: bold;
-}
-.socials p{
-    font-size: 25px;
-    margin-left: 920;
-    font-weight: bold;
-}
+
