--- a/style.css
+++ b/style.css
@@ -3,15 +3,57 @@
     margin: 0;
     box-sizing: border-box;
 }
+.navbar{
+    width: 85%;
+    margin: auto;
+    margin-bottom: 0%;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo{
+    width: 80px;
+    cursor: pointer;
+}
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    font-size: 15px;
+    position: relative;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+}
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 0%;
+    background: #1a1e1e;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 100%;
+}
 body{
-    font-family: 'Outfit';
+    font-family: arial;
     background: linear-gradient(#ffdad5, #fff7f9);
 }
 .contact-container{
-    height: 0vh;
+    height: 5vh;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+.contact-container h2{
+    font-size: 32px;
+
 }
 .contact-left{
     display: flex;
@@ -69,9 +111,7 @@ body{
 .contact-left button img{
     height: 15px;
 }
-.contact-right img{
-    width: 500px;
-}
+
 @media (max-width:800px) {
     .contact-inputs{
         width: 80vw;
