--- a/shopstyle.css
+++ b/shopstyle.css
@@ -44,6 +44,7 @@
     list-style: none;
     display: inline-block;
     margin: 0 20px;
+    font-size: 20px;
     position: relative;
 }
 .navbar ul li a{
