--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,25 +1,24 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: fantasy;
 }
 .banner{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(#ffdad5, #fff7f9);
+    background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
     background-size: cover;
     background-position: center;
 }
 .navbar{
-    width: 85%;
-    margin: auto;
     padding: 35px 0;
+    font-weight: none;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .logo{
-    width: 80px;
+    width: 65px;
     cursor: pointer;
 }
 .navbar ul li{
@@ -30,14 +29,14 @@
 }
 .navbar ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     text-transform: uppercase;
 }
 .navbar ul li::after{
     content: '';
     height: 3px;
     width: 0%;
-    background: #1a1e1e;
+    background: white;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -52,15 +51,16 @@
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
-    color: rgb(23, 20, 20);
+    color: white;
 }
 .content h1{
     font-size: 70px;
     margin-top: 80px;
+    font-weight: none   ;
 }
 .content p{
     margin: 20px auto;
-    font-weight: bold;
+    font-weight: none   ;
 }
 button{
     width: 200px;
@@ -68,10 +68,10 @@ button{
     text-align: center;
     margin: 20px 10;
     border-radius: 25px;
-    font-weight: bold;
-    border: 2px solid #1a1e1e;
+    font-weight: none   ;
+    border: 2px solid black;
     background: transparent;
-    color: grey;
+    color: white;
     cursor: pointer;
     position: relative;
     overflow: hidden;
@@ -93,3 +93,4 @@ button:hover span{
 button:hover{
     border: none;
 }
+
