--- a/shopstyle.css
+++ b/shopstyle.css
@@ -1,40 +1,46 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: arial;
+    font-family: fantasy;
 }
 .socials{
-    width: 63%;
-    top: 50%;
-    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     transform: translate(-50%);
-    text-align: right;
     color: rgb(23, 20, 20);
 }
 .socials h1{
     font-size: 70px;
     width: 91%;
 }
+.products{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: none   ;
+}
 .socials p{
     width: 81%;
     margin-left: 30px;
-    font-weight: bold;
+    font-weight: none;
+    color: white;
     position: relative;
 }
 .banner{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(#ffdad5, #fff7f9);
+    background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
     background-size: cover;
     background-position: center;
 }
 .navbar{
-    width: 85%;
-    margin: auto;
     padding: 35px 0;
+    font-weight: none;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .logo{
     width: 80px;
@@ -49,14 +55,14 @@
 }
 .navbar ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     text-transform: uppercase;
 }
 .navbar ul li::after{
     content: '';
     height: 3px;
     width: 0%;
-    background: #1a1e1e;
+    background: white;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -66,7 +72,6 @@
     width: 100%;
 }
 .socials{
-    font-family: arial;
     border: 100px;
 }
 .socials h1{
@@ -77,5 +82,6 @@
 .socials p{
     font-size: 25px;
     margin-left: 920;
+    color: white;
     font-weight: bold;
 }
