--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: fantasy;
     box-sizing: border-box;
 }
 .navbar{
-    width: 85%;
-    margin: auto;
-    margin-bottom: 0%;
     padding: 35px 0;
+    font-size: 45%;
+    font-weight: none;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .logo{
     width: 80px;
@@ -25,14 +25,14 @@
 }
 .navbar ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     text-transform: uppercase;
 }
 .navbar ul li::after{
     content: '';
     height: 3px;
     width: 0%;
-    background: #1a1e1e;
+    background: white;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -43,7 +43,7 @@
 }
 body{
     font-family: arial;
-    background: linear-gradient(#ffdad5, #fff7f9);
+    background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
 }
 .contact-container{
     height: 5vh;
@@ -59,6 +59,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
+    font-weight: none  ;
     gap: 20px;
 }
 .contact-left-title h2{
@@ -111,6 +113,7 @@ body{
 .contact-left button img{
     height: 15px;
 }
+
 
 @media (max-width:800px) {
     .contact-inputs{
