--- a/aboutus.css
+++ b/aboutus.css
@@ -53,7 +53,7 @@
 }
 .navbar{
     padding: 35px 0;
-    font-weight: bold;
+    font-weight: none;
     display: flex;
     align-items: center;
     justify-content: center;
