--- a/shopstyle.css
+++ b/shopstyle.css
@@ -8,7 +8,7 @@
     align-items:flex-end;
     justify-content:space-between;
     transform: translate(-50%);
-    color: rgb(23, 20, 20);
+    color: white(23, 20, 20);
 }
 .socials h1{
     font-size: 70px;
@@ -30,16 +30,18 @@
 }
 .banner{
     width: 100%;
-    height: 100vh;
-    background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
+    height:8%;
+    background-color: rgb(40, 215, 154);
     background-size: cover;
-    background-position: center;
+    background-position: left;
+    align-items: white;
 }
 .navbar{
     padding: 35px 0;
     font-weight: none;
-    display: flex;
-    align-items: center;
+    display:block;
+    background-position: left;
+    align-items: left;
     justify-content: center;
 }
 .logo{
@@ -55,8 +57,10 @@
 }
 .navbar ul li a{
     text-decoration: none;
-    color: white;
-    text-transform: uppercase;
+    color: black;
+    font-size: 20px;
+    font-weight:bold;
+    text-transform:initial;
 }
 .navbar ul li::after{
     content: '';
@@ -82,12 +86,15 @@
 .socials p{
     font-size: 25px;
     margin-left: 920;
-    color: white;
+    color: black;
     font-weight: bold;
 }
-@media  screen and (min-width: 321px) and (max-width:960px){
-    xxx
-}
-@media screen and (min-width: 720px) and (max-width:1024px){
-       xxxxx
-}
+    @media (max-width:800px) {
+        .contact-inputs{
+            width: 80vw;
+        }
+        .contact-right{
+            display: none;
+            
+        }
+    }
