--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 }
 .navbar{
     padding: 35px 0;
-    font-size: 45%;
     font-weight: none;
-    display: flex;
-    align-items: center;
+    display:block;
+    background-position: left;
+    align-items: left;
     justify-content: center;
 }
 .logo{
@@ -20,19 +20,20 @@
     list-style: none;
     display: inline-block;
     margin: 0 20px;
-    font-size: 15px;
     position: relative;
 }
 .navbar ul li a{
     text-decoration: none;
-    color: white;
-    text-transform: uppercase;
+    color: black;
+    font-size: 20px;
+    font-weight:bold;
+    text-transform:initial;
 }
 .navbar ul li::after{
     content: '';
     height: 3px;
     width: 0%;
-    background: white;
+    background: black;
     position: absolute;
     left: 0;
     bottom: -5px;
@@ -43,7 +44,6 @@
 }
 body{
     font-family: arial;
-    background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
 }
 .contact-container{
     height: 5vh;
@@ -59,7 +59,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: white;
+    color: wblackite;
     font-weight: none  ;
     gap: 20px;
 }
@@ -103,7 +103,7 @@ body{
     align-items: center;
     padding: 15px 30px;
     font-size: 16px;
-    color: #fff;
+    color: black;
     gap: 10px;
     border: none;
     border-radius: 50px;
@@ -114,13 +114,23 @@ body{
     height: 15px;
 }
 
-
+.banner{
+    width: 100%;
+    height:8%;
+    background-color: rgb(40, 215, 154);
+    background-size: cover;
+    background-position: left;
+    align-items: white;
+}
 @media (max-width:800px) {
     .contact-inputs{
         width: 80vw;
     }
     .contact-right{
         display: none;
+        
+    }
+}
         
     }
 }
