--- a/aboutus.css
+++ b/aboutus.css
@@ -46,6 +46,7 @@
 }
 .banner{
     width: 100%;
+    height: 0vh;
     background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
     background-size: cover;
     background-position: center;
