--- a/indexstyle.css
+++ b/indexstyle.css
@@ -5,10 +5,13 @@
 }
 .banner{
     width: 100%;
-    background-color: rgb(40, 215, 154);
+    height: 0vh;
     background-size: cover;
     background-position: left;
     align-items: white;
+}
+body{
+    background-color: antiquewhite;
 }
 .navbar{
     padding: 35px 0;
