--- a/aboutus.css
+++ b/aboutus.css
@@ -23,7 +23,8 @@
     justify-content: center;
 }
 body{
-    background-color: rgb(40, 215, 154);
+    background-color: antiquewhite;
+}
 .socials{
     border: 100px;
 }
